# fec-example

./: .gitignore  CLAUDE.md  Justfile  README.md  TractorSupplyFECr.csv  api-demo.py  build-site.py  fec_client.py  main.py  mise.toml  pyproject.toml  tmp-TracktorSupplyFEC.csv
.github/workflows/: pages.yml
cache/: index.json
csv/: AllPacs.xslx.csv  Aristotle1.xlsx.csv  Fortune500_2021.xlsx.csv  GovernmentAgencies.xlsx  GovernmentAgencies.xlsx.csv  boards_roster.xlsx.csv
csv/bod/: AmazonBOD.xlsx  AmerisourceBergenBOD.xlsx  AppleBOD.xlsx  BankofAmericaBOD.xlsx  CVSBOD.xlsx  Cardinal Health BOD.xlsx  CitigroupBOD.xlsx  ExxonMobileBOD.xlsx  FORDBOD.xlsx  FannieMaeBOD.xlsx  McKessenBOD.xlsx  WalmartBOD.xlsx  berkshirehatthawaybod.xlsx
docs/: index.html
docs-src/: sas-port.md
docs/data/: EXXON_MOBIL_2019-01-01_2020-12-31.csv  EXXON_MOBIL_2019-01-01_2020-12-31.json  TRACTOR_SUPPLY_2019-01-01_2020-12-31.csv  TRACTOR_SUPPLY_2019-01-01_2020-12-31.json  index.html
docs/notebook/: index.html  notebook_content.html
docs/source/: index.html
docs/sql/: index.html
notebooks/: analysis.html  analysis.ipynb  basic-example.html  basic-example.ipynb  cross-company.html  cross-company.ipynb  cross_company.ipynb
notebooks/.ipynb_checkpoints/: analysis-checkpoint.ipynb
output/schedule_a/: MICROSOFT_2019-01-01_2020-12-31.csv  MICROSOFT_2019-01-01_2020-12-31.json  TRACTOR_SUPPLY_2019-01-01_2020-12-31.csv  TRACTOR_SUPPLY_2019-01-01_2020-12-31.json  WALMART_2019-01-01_2020-12-31.csv  (+1 more)
tools/: build_cross_company_nb.py  dev_watch.py  import_sas_data.py  prewarm_cache.py
(+21 files in other folders)
