[project]
name = "fec-example"
version = "0.1.0"
description = "FEC data example"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "click>=8.0.0",
    "duckdb>=0.9.0",
    "gender-guesser>=0.4.0",
    "livereload>=2.7.0",
    "matplotlib>=3.8.0",
    "mistune>=3.2.1",
    "notebook>=7.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "plotly>=5.20.0",
    "requests>=2.31.0",
]
